...
    val exportFeedback: MainExportFeedback? = null,
) {
    val isTimerRunning: Boolean
        get() = timerAction == MainTimerAction.STOP

    companion object {
        const val ZERO_DURATION = "00:00:00"
    }
}

sealed interface MainEvent {
    data class SelectTask(
        val taskId: String,
...
